# aicg

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: main.yaml
client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs  middlewares.rs
src/: lib.rs
