[package]
name = "aicg-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
license-file = "LICENSE"
keywords = ["chatgpt"]
categories = ["ai.foundation"]
repository = "https://github.com/SyntSugar/aicg"
readme = "README.md"
description = "ChatGPT rust sdk and cli set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
