[package]
name = "aicg-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
license-file = "LICENSE"
keywords = ["chatgpt"]
categories = ["ai.foundation"]
repository = "https://github.com/SyntSugar/aicg"
readme = "README.md"
description = "ChatGPT rust sdk and cli set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.5"
hex = "0.4.3"