[package]
name = "aigc-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
license-file = "LICENSE"
keywords = ["chatgpt"]
categories = ["ai.foundation"]
repository = "https://github.com/SyntSugar/aicg"
readme = "README.md"
description = "ChatGPT rust sdk and cli set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "filter"] }
sha1 = "0.10.5"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }